Added information about cold cache and compilers to experimental setup section.

--- a/cfdapps_plots.tex
+++ b/cfdapps_plots.tex
@@ -587,6 +587,7 @@
     \caption{HWRF on Intel\textregistered\ Xeon\textregistered\ Gold 6140}
     \label{fig:hwrf_gold}
   \end{subfigure}\bigbreak
+  \label{fig:socapps_plots}
   \caption{Results for CFD applications}
 \end{figure}
 
