New numbers in table 1

--- a/architectures.tex
+++ b/architectures.tex
@@ -34,7 +34,8 @@ the text below describes important architectural improvements introduced into th
 \multicolumn{1}{|l|}{\textbf{L1 (data) cache}} &  &  &  & 2803 \\ \hline
 \multicolumn{1}{|l|}{\textbf{L2 cache}} &  &  &  & 2803 \\ \hline
 \multicolumn{1}{|l|}{\textbf{L3 cache}} &  &  &  & 3738 \\ \hline
-\multicolumn{1}{|l|}{\textbf{Total memory}} &  &  &  & 230 \\ \hline
+%https://www.anandtech.com/Show/Index/11544?cPage=22&all=False&sort=0&page=12&slug=intel-skylake-ep-vs-amd-epyc-7000-cpu-battle-of-the-decade
+\multicolumn{1}{|l|}{\textbf{Total memory}} & 256 & 307 &  & 230 \\ \hline
 \multicolumn{1}{|l|}{\textbf{SMP interconnect}} &  &  &  & 38.4 \\ \hline
 \multicolumn{1}{|l|}{\textbf{PCIe interconnect}} &  &  &  & 128 \\ \hline
 \multicolumn{1}{|l|}{\textbf{I/O} (maximum theoretical)} &  &  &  & 64 (simplex) \\ \hline
